# spark-connect-rs

./: .env  .gitignore  .gitmodules  .pre-commit-config.yaml  Cargo.toml  Dockerfile  README.md  build.rs  docker-compose.yml  envoy.yaml
.github/: pull_request_template.md
.github/workflows/: build.yml  release.yml
core/: Cargo.toml  build.rs
core/src/: catalog.rs  column.rs  conf.rs  dataframe.rs  errors.rs  expressions.rs  group.rs  lib.rs  plan.rs  readwriter.rs  session.rs  types.rs  window.rs
core/src/client/: builder.rs  middleware.rs  mod.rs
core/src/functions/: mod.rs
core/src/streaming/: mod.rs
crates/connect/: Cargo.toml  build.rs
crates/connect/protobuf/spark-3.5/: buf.yaml
crates/connect/protobuf/spark-3.5/spark/connect/: base.proto
crates/connect/src/: catalog.rs  column.rs  conf.rs  dataframe.rs  errors.rs  expressions.rs  group.rs  lib.rs  plan.rs  readwriter.rs  session.rs  storage.rs  types.rs  window.rs
crates/connect/src/client/: builder.rs  config.rs  middleware.rs  mod.rs
crates/connect/src/functions/: mod.rs
crates/connect/src/streaming/: mod.rs
datasets/: full_user.avsc
examples/: Cargo.toml  README.md  databricks.rs  delta.rs  reader.rs  readstream.rs  sql.rs  writer.rs
examples/src/: databricks.rs  deltalake.rs  reader.rs  readstream.rs  sql.rs  unity.rs  writer.rs
github/workflows/: build.yml  release.yml
node/: Cargo.toml  index.d.ts  index.js  package.json
node/__test__/: index.spec.mjs
node/npm/darwin-x64/: README.md  package.json
node/npm/linux-x64-gnu/: README.md  package.json
node/npm/win32-x64-msvc/: README.md  package.json
node/src/: dataframe.rs  errors.rs  lib.rs  session.rs
rust/: Cargo.toml
rust/examples/: databricks.rs  delta.rs  reader.rs  readstream.rs  sql.rs  types.rs  writer.rs
rust/src/: lib.rs
src/: catalog.rs  column.rs  dataframe.rs  errors.rs  expressions.rs  group.rs  lib.rs  plan.rs  readwriter.rs  session.rs  storage.rs  types.rs  utils.rs  window.rs
src/client/: mod.rs
src/dataframe/: dataframe.rs  mod.rs
src/execution/: context.rs  mod.rs
src/functions/: mod.rs
src/handler/: mod.rs
src/plan/: logical_plan.rs  mod.rs
src/streaming/: mod.rs
wasi/: Cargo.toml
wasi/src/: lib.rs  main.rs
wasi/tests/: web.rs
