[workspace]
members = ["core", "rust", "examples"]
resolver = "2"

[workspace.package]
authors = ["Steve Russo <64294847+sjrusso8@users.noreply.github.com>"]
keywords = ["spark", "spark_connect"]
readme = "README.md"
edition = "2021"
homepage = "https://github.com/sjrusso8/spark-connect-rs"
description = "Apache Spark Connect Client for Rust"
license = "Apache-2.0"
documentation = "https://docs.rs/spark-connect-rs"
repository = "https://github.com/sjrusso8/spark-connect-rs"
rust-version = "1.76"

[workspace.dependencies]
tonic = { version ="0.11", default-features = false }
tonic-web-wasm-client = { version = "0.5" }

tokio = { version = "1.37", default-features = false, features = ["macros"] }

arrow = { version = "51", features = ["prettyprint"] }
arrow-ipc = { version = "51" }

serde_json = { version = "1" }

prost = { version = "0.12" }
prost-types = { version = "0.12" }

rand = { version = "0.8" }
uuid = { version = "1.8", features = ["v4"] }
url = { version = "2.5" }

chrono = { version = "0.4" }

getrandom = { version = "0.2" }

datafusion = { version = "38.0", default-features = false }
polars = { version = "0.40", default-features = false }
polars-arrow = { version = "0.40", default-features = false, features = ["arrow_rs"]  }
