[package]
name = "spark-connect-core"
version = "0.0.1-beta.5"
authors.workspace = true
keywords.workspace = true
readme.workspace = true
edition.workspace = true
homepage.workspace = true
description.workspace = true
license.workspace = true
documentation.workspace = true
repository.workspace = true
rust-version.workspace = true
include = [
    "build.rs",
    "src/**/*",
    "protobuf/**/*",
]

[dependencies]
tonic = { workspace = true, default-features = false, optional = true }
tonic-web-wasm-client = { workspace = true, optional = true }

tokio = { workspace = true, optional = true }

arrow = { workspace = true }
arrow-ipc = { workspace = true }

serde_json = { workspace = true }

prost = { workspace = true }
prost-types = { workspace = true }

rand = { workspace = true }
uuid = { workspace = true }
url =  { workspace = true }

chrono = { workspace = true }

getrandom = { workspace = true, optional = true }

datafusion = { workspace = true, optional = true }

polars = { workspace = true, optional = true }
polars-arrow = { workspace = true, optional = true }

[dev-dependencies]
futures = "0.3"
tokio = { workspace = true, features = ["rt-multi-thread"] }

[build-dependencies]
tonic-build = "0.12"

[lib]
doctest = false

[features]
default = [
  "tokio",
  "tonic/codegen",
  "tonic/prost",
  "tonic/transport",
]

tls = [
  "tonic/tls",
  "tonic/tls-roots"
]

wasm = [
 "tonic-web-wasm-client",
 "tonic/codegen",
 "tonic/prost",
 "getrandom/js",
 "tokio"
]

datafusion = [
  "dep:datafusion"
]

polars = [
  "dep:polars",
  "dep:polars-arrow"
]
