[package]
name = "examples"
version = "0.0.0"
authors.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[[bin]]
name = "sql"
path = "src/sql.rs"

[[bin]]
name = "deltalake"
path = "src/deltalake.rs"

[[bin]]
name = "reader"
path = "src/reader.rs"

[[bin]]
name = "writer"
path = "src/writer.rs"

[[bin]]
name = "databricks"
path = "src/databricks.rs"
required-feature = ["tls"]

[dependencies]
spark-connect-rs = { version = "0.0.1-beta.4", path = "../rust" }
tokio = { workspace = true }

[features]
tls = ["spark-connect-rs/tls"]
