# Licensed to the Apache Software Foundation (ASF) under one
# or more contributor license agreements.  See the NOTICE file
# distributed with this work for additional information
# regarding copyright ownership.  The ASF licenses this file
# to you under the Apache License, Version 2.0 (the
# "License"); you may not use this file except in compliance
# with the License.  You may obtain a copy of the License at
#
#   http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing,
# software distributed under the License is distributed on an
# "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
# KIND, either express or implied.  See the License for the
# specific language governing permissions and limitations
# under the License.

[package]
name = "examples"
version = "0.0.0"
authors.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[[bin]]
name = "sql"
path = "src/sql.rs"

[[bin]]
name = "deltalake"
path = "src/deltalake.rs"

[[bin]]
name = "reader"
path = "src/reader.rs"

[[bin]]
name = "writer"
path = "src/writer.rs"

[[bin]]
name = "readstream"
path = "src/readstream.rs"

[[bin]]
name = "databricks"
path = "src/databricks.rs"
required-feature = ["tls"]

[dependencies]
spark-connect-rs = { version = "0.0.2", path = "../crates/connect" }
tokio = { workspace = true, features = ["rt-multi-thread"] }

[features]
tls = ["spark-connect-rs/tls"]
