[package]
name = "wasi"
version = "0.1.0"
authors.workspace = true
keywords.workspace = true
readme.workspace = true
edition.workspace = true
homepage.workspace = true
description.workspace = true
license.workspace = true
documentation.workspace = true
repository.workspace = true
rust-version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.37", default-features = false, features = ['rt', "macros"] }
spark-connect-core = { version = "0.0.0", path = "../core", default-features = false, features = ["wasm"] }
