# Licensed to the Apache Software Foundation (ASF) under one
# or more contributor license agreements.  See the NOTICE file
# distributed with this work for additional information
# regarding copyright ownership.  The ASF licenses this file
# to you under the Apache License, Version 2.0 (the
# "License"); you may not use this file except in compliance
# with the License.  You may obtain a copy of the License at
#
#   http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing,
# software distributed under the License is distributed on an
# "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
# KIND, either express or implied.  See the License for the
# specific language governing permissions and limitations
# under the License.

[package]
name = "spark-connect-rs"
version = "0.0.2"
authors.workspace = true
keywords.workspace = true
readme.workspace = true
edition.workspace = true
homepage.workspace = true
description.workspace = true
license.workspace = true
documentation.workspace = true
repository.workspace = true
rust-version.workspace = true
include = [
    "build.rs",
    "src/**/*",
    "protobuf/**/*",
]

[dependencies]
tonic = { workspace = true, optional = true }

tower = { workspace = true }
tokio = { workspace = true, optional = true }

futures = { workspace = true }
thiserror = { workspace = true }

http-body = { workspace = true }
bytes = "1"

arrow = { workspace = true }
arrow-ipc = { workspace = true }

serde_json = { workspace = true }

prost = { workspace = true }
prost-types = { workspace = true }

rand = { workspace = true }
uuid = { workspace = true }
url = { workspace = true }
regex = { workspace = true }

chrono = { workspace = true }

datafusion = { workspace = true, optional = true }

polars = { workspace = true, optional = true }
polars-arrow = { workspace = true, optional = true }

[dev-dependencies]
futures = "0.3"
tokio = { workspace = true, features = ["rt-multi-thread"] }

[build-dependencies]
tonic-build = "0.13"

[lib]
doctest = false

[features]
default = [
    "tokio",
    "tonic"
]

tls = [
    "tonic/tls-aws-lc"
]

datafusion = [
    "dep:datafusion"
]

polars = [
    "dep:polars",
    "dep:polars-arrow"
]
